RD-2008-02-26-0: Bugfix:    - fixed file issues with NFS4 spooling
                            - added shadowd installation message
                 Review:    EB

RH-2008-02-26-0: Enhancem:  new configuration parameter hedeby_java_version for
                            hedeby checktree
                 Review:    CR

HP-2008-02-25-0: Enhancem:  added automatic entering of automounter prefixes
                            to sge_aliases file. This can also handle variable
                            automounter prefixes (e.g. on Windows)
                 Review:    CR

AP-2008-02-21-0: Bugfix:    fix install messages to work with any branch

JO-2008-02-21-0: Bugfix:    fix install messages to work with any branch
      `          Review:    AP

AP-2008-02-20-0: Enhancem.: Adding proc get_SWC_USER
                 Bugfix:    o ARCo test - start/stop dbwriter when necessary
                            o handling if database removed from db configuration
                 Review:    JG

JG-2008-02-20-0: Enhancem.: added test for IZ 2495
                            speedup for auto install
                 Review:    RD

JG-2008-02-18-0: Enhancem.: added test for IZ 2492
                 Review:    RD

RD-2008-02-18-0: Enhancem.: added test for IZ 2490
                 Review:    JG

CR-2008-02-18-1: Enhancem.: o Added first version of basic resource move test
                 Review:    RH

CR-2008-02-18-0: Bugfix:    o operate_add_cluster(): don't log washing
                              machine output of remote ts cluster
                            o log severe error when hedeby host has no
                              local spool directory in ts host config
                            o enhanced get_hedeby_default_services()
                            o logging cleanup
                            o fixed problem in get_resource_info() for
                              resources like "host@service"